<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_tab"
        android:icon="@drawable/home_deactive"
        android:title="@string/home"/>

    <item
        android:title="@string/topten"
        android:id="@+id/top_ten_tab"
        android:icon="@drawable/top_ten_deactive" />

    <item
        android:title="@string/uploadvideo"
        android:id="@+id/upload_video_tab"
        android:icon="@drawable/upload_video_deactive" />
    <item
        android:title="@string/inbox"
        android:id="@+id/inbox_tab"
        android:icon="@drawable/inbox_deactive" />
    <item
        android:title="@string/user"
        android:id="@+id/user_tab"
        android:icon="@drawable/user_deactive" />

</menu>