<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:id="@+id/rootLayout"
    android:padding="@dimen/dim15"
    tools:context=".ui.common.SignInActivity">


    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="50dp"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim16"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/skip_txt"
        android:textColor="@color/grey"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_semibold"
        android:text="@string/sign_in_title"
        android:textColor="@color/white"
        android:textSize="@dimen/sp32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_skip" />

    <include
        android:id="@+id/img_studclips"
        layout="@layout/studclip_icon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in" />

    <RelativeLayout
        android:id="@+id/rv_form"
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:layout_marginTop="@dimen/dim30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_studclips">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@drawable/round_light_theme_bg"
            android:orientation="vertical"
            android:padding="@dimen/dim10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim5"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/user_email_txt"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp16" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim10"
                android:background="@drawable/round_edittext_background"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/enter_email_txt"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dim10"
                android:textColor="@color/white"
                android:textSize="@dimen/sp16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim15"
                android:fontFamily="@font/rubik_regular"
                android:text="Password"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp16" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim10"
                android:background="@drawable/round_edittext_background"
                android:paddingStart="@dimen/dim10"
                android:paddingEnd="@dimen/dim10">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/eyeLayout"
                    android:background="@null"
                    android:fontFamily="@font/rubik_regular"
                    android:hint="@string/enter_password_txt"
                    android:inputType="textPassword"
                    android:paddingTop="@dimen/dim10"
                    android:paddingBottom="@dimen/dim10"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16" />


                <LinearLayout
                    android:id="@+id/eyeLayout"
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="end">

                    <ImageView
                        android:id="@+id/eyeImage"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/eye_show" />

                </LinearLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim20">

                <CheckBox
                    android:id="@+id/checkbox_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dim50"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:button="@drawable/remember_check_selector"
                    android:fontFamily="@font/rubik_regular"
                    android:paddingStart="@dimen/dim10"
                    android:text="@string/remember_me_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/llCheckLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivCheckBox"
                        android:layout_width="@dimen/dim20"
                        android:layout_height="@dimen/dim20"
                        android:src="@drawable/unchecked_img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dim10"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/remember_me_txt"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp16" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tv_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/rubik_medium"
                    android:text="@string/forget_password_txt"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16"
                    />
            </RelativeLayout>
        </LinearLayout>


        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dim15"
            android:layout_marginEnd="@dimen/dim15"
            android:background="@drawable/round_red_background"
            android:fontFamily="@font/rubik_semibold"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16" />
    </RelativeLayout>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_not_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_txt"
        android:textColor="@color/grey"
        android:textSize="@dimen/sp15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/sp15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>