<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:padding="@dimen/dim15"
    android:id="@+id/rootLayout"
    android:focusableInTouchMode="true"
    tools:context=".ui.common.ForgotPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/back_button"
                android:layout_marginTop="@dimen/dim10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim15"
                android:fontFamily="@font/rubik_semibold"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/sp32" />

            <include
                android:id="@+id/img_studclips"
                layout="@layout/studclip_icon_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim50" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dim40"
                android:src="@drawable/ic_forgot_pass" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dim30"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/please_enter_your_registered_email"
                android:textColor="@color/grey"
                android:textSize="@dimen/sp16" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim20"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_light_theme_bg"
                    android:orientation="vertical"
                    android:padding="@dimen/dim10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dim5"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/user_email_txt"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/sp16" />

                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dim10"
                        android:background="@drawable/round_edittext_background"
                        android:hint="@string/enter_email_txt"
                        android:padding="@dimen/dim10"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp15"
                        android:inputType="textEmailAddress"
                        android:layout_marginBottom="@dimen/dim60"/>
                </LinearLayout>

                <Button
                    android:layout_marginTop="@dimen/dim120dp"
                    android:id="@+id/resetPassBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dim15"
                    android:layout_marginEnd="@dimen/dim15"
                    android:background="@drawable/round_red_background"
                    android:fontFamily="@font/rubik_semibold"
                    android:text="@string/reset_password"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16" />
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>